--- a/angular/diary/package.json
+++ b/angular/diary/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@junobuild/core": "^0.0.10",
+    "nanoid": "^4.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
