--- a/react/poll/package.json
+++ b/react/poll/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@junobuild/core": "^0.0.9",
+    "@junobuild/core": "^0.0.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
     "prettier": "2.8.4",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "tailwindcss": "^3.2.7"
   }
 }
