feat: save data

--- a/vue/diary/package.json
+++ b/vue/diary/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@junobuild/core": "^0.0.18",
+    "nanoid": "^4.0.2",
     "pinia": "^2.0.36",
     "vue": "^3.3.2"
   },
