--- a/vanilla/package.json
+++ b/vanilla/package.json
@@ -15,6 +15,7 @@
     "vite-plugin-compression": "^0.5.1"
   },
   "dependencies": {
+    "@junobuild/analytics": "file:../../juno-js/packages/analytics",
     "@junobuild/core": "^0.0.18"
   }
 }
