--- a/astro/package.json
+++ b/astro/package.json
@@ -8,7 +8,7 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier --write ."
+    "format": "prettier --write './**/*.{ts,js,mjs,json,scss,css,astro,html,md}'"
   },
   "devDependencies": {
     "@astrojs/check": "^0.3.1",
@@ -17,6 +17,7 @@
     "@astrojs/sitemap": "^3.0.3",
     "astro": "^3.4.3",
     "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
