--- a/next/diary/package.json
+++ b/next/diary/package.json
@@ -10,17 +10,17 @@
     "format": "npx prettier --write ."
   },
   "dependencies": {
-    "@junobuild/core": "^0.0.20",
-    "nanoid": "^4.0.2",
-    "next": "13.4.7",
+    "@junobuild/core-peer": "^0.0.1",
+    "nanoid": "^5.0.3",
+    "next": "14.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.5"
   }
 }
