--- a/astro/package.json
+++ b/astro/package.json
@@ -15,12 +15,13 @@
     "@astrojs/mdx": "^1.1.3",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.3",
+    "@junobuild/vite-plugin": "^0.0.6",
     "astro": "^3.4.3",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@junobuild/core": "^0.0.33"
+    "@junobuild/core": "^0.0.43"
   }
 }
