--- a/astro/package.json
+++ b/astro/package.json
@@ -15,7 +15,8 @@
     "@astrojs/mdx": "^1.1.3",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.3",
-    "@junobuild/vite-plugin": "^0.0.6",
+    "@junobuild/config": "^0.0.2",
+    "@junobuild/vite-plugin": "^0.0.7",
     "astro": "^3.4.3",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.1",
