--- a/react/diary/package.json
+++ b/react/diary/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@junobuild/config": "^0.0.4",
+    "@junobuild/vite-plugin": "^0.0.8",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
