--- a/rust/https-outcalls/src/satellite/Cargo.toml
+++ b/rust/https-outcalls/src/satellite/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "satellite"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 
 [lib]
@@ -13,7 +13,7 @@ ic-cdk-macros = "0.8.1"
 serde = "1.0.190"
 serde_cbor = "0.11.2"
 serde_json = "1.0.113"
-junobuild-satellite = "0.0.15-patch.1"
-junobuild-macros = "0.0.1"
+junobuild-satellite = "0.0.16"
+junobuild-macros = "0.0.2"
 junobuild-utils = "0.0.1"
 
