--- a/rust/ethereum-address/package.json
+++ b/rust/ethereum-address/package.json
@@ -17,6 +17,7 @@
     "vite-plugin-compression": "^0.5.1"
   },
   "dependencies": {
-    "@junobuild/core": "^0.0.48"
+    "@junobuild/core": "^0.0.48",
+    "ethers": "^6.11.1"
   }
 }
