--- a/rust/json/src/satellite/Cargo.toml
+++ b/rust/json/src/satellite/Cargo.toml
@@ -16,4 +16,5 @@ junobuild-satellite = "=0.0.18-patch.2"
 junobuild-macros = "0.0.2"
 junobuild-utils = "0.0.2"
 junobuild-storage = "0.0.3"
+junobuild-shared = "0.0.16"
 
