--- a/vanilla/vite-typescript/package.json
+++ b/vanilla/vite-typescript/package.json
@@ -10,12 +10,13 @@
     "postinstall": "rsync -aqz node_modules/@junobuild/core/dist/workers/*.js public/workers && rsync -aqz node_modules/@junobuild/analytics/dist/workers/*.js public/workers"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
-    "vite": "^5.2.11",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.0",
     "vite-plugin-compression": "^0.5.1"
   },
   "dependencies": {
-    "@junobuild/analytics": "^0.0.22",
-    "@junobuild/core": "^0.0.49"
+    "@junobuild/analytics": "^0.0.25",
+    "@junobuild/core": "^0.0.58",
+    "@junobuild/storage": "^0.0.3-next-2024-08-09.1"
   }
 }
