--- a/node/admin/custom-domain/package.json
+++ b/node/admin/custom-domain/package.json
@@ -13,10 +13,11 @@
   "license": "MIT",
   "dependencies": {
     "@junobuild/admin": "^0.0.56",
+    "@junobuild/cli-tools": "^0.0.14",
     "@junobuild/utils": "^0.0.25",
     "conf": "^13.0.1",
     "dotenv": "^16.4.5",
-    "node-fetch": "^3.3.2"
+    "prompts": "^2.4.2"
   },
   "devDependencies": {
     "prettier": "^3.3.3",
