--- a/vanilla/vite-typescript/package.json
+++ b/vanilla/vite-typescript/package.json
@@ -10,13 +10,14 @@
     "postinstall": "rsync -aqz node_modules/@junobuild/core/dist/workers/*.js public/workers && rsync -aqz node_modules/@junobuild/analytics/dist/workers/*.js public/workers"
   },
   "devDependencies": {
-    "typescript": "^5.5.4",
-    "vite": "^5.4.0",
+    "@junobuild/config": "^0.0.17",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11",
     "vite-plugin-compression": "^0.5.1"
   },
   "dependencies": {
-    "@junobuild/analytics": "^0.0.25",
-    "@junobuild/core": "^0.0.58",
-    "@junobuild/storage": "^0.0.3-next-2024-08-09.1"
+    "@junobuild/analytics": "^0.0.31",
+    "@junobuild/core": "^0.1.0",
+    "@junobuild/storage": "^0.1.1"
   }
 }
