--- a/node/admin/save/package.json
+++ b/node/admin/save/package.json
@@ -11,13 +11,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@junobuild/core": "^0.0.8",
-    "conf": "^11.0.1",
-    "dotenv": "^16.0.3",
-    "node-fetch": "^3.3.0"
+    "@dfinity/identity": "^2.2.0",
+    "@dfinity/principal": "^2.2.0",
+    "@junobuild/core": "^0.1.1",
+    "conf": "^13.1.0",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
-    "prettier": "^2.8.7",
-    "prettier-plugin-organize-imports": "^3.2.2"
+    "prettier": "^3.4.2",
+    "prettier-plugin-organize-imports": "^4.1.0"
   }
 }
