--- a/rust/hooks/src/satellite/Cargo.toml
+++ b/rust/hooks/src/satellite/Cargo.toml
@@ -8,11 +8,9 @@ crate-type = ["cdylib"]
 
 [dependencies]
 candid = "0.10.2"
-ic-cdk = "0.12.1"
-ic-cdk-macros = "0.8.1"
+ic-cdk = "0.17.0"
 serde = "1.0.190"
-serde_cbor = "0.11.2"
-junobuild-satellite = "0.0.16"
-junobuild-macros = "0.0.2"
-junobuild-utils = "0.0.1"
+junobuild-satellite = { version = "0.0.21", default-features = false, features = ["on_set_doc", "on_set_many_docs", "on_delete_doc", "on_upload_asset"] }
+junobuild-macros = "0.0.3"
+junobuild-utils = "0.0.4"
 
