--- a/rust/json/src/satellite/Cargo.toml
+++ b/rust/json/src/satellite/Cargo.toml
@@ -8,13 +8,12 @@ crate-type = ["cdylib"]
 
 [dependencies]
 candid = "0.10.2"
-ic-cdk = "0.14.0"
-ic-cdk-macros = "0.14.0"
+ic-cdk = "0.17.0"
 serde = "1.0.190"
-serde_cbor = "0.11.2"
-junobuild-satellite = "=0.0.18-patch.2"
-junobuild-macros = "0.0.2"
-junobuild-utils = "0.0.2"
-junobuild-storage = "0.0.3"
-junobuild-shared = "0.0.16"
+junobuild-satellite = { version = "= 0.0.21-patch.2", default-features = false, features = ["on_set_doc"] }
+junobuild-macros = "0.0.3"
+junobuild-utils = "0.0.4"
+junobuild-shared = "0.0.22"
+junobuild-storage = "= 0.0.12"
+junobuild-collections = "0.0.9"
 
