--- a/vanilla/vite-typescript/package.json
+++ b/vanilla/vite-typescript/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@junobuild/config": "^0.1.0",
     "typescript": "^5.7.3",
-    "vite": "^6.0.11"
+    "vite": "^6.0.11",
+    "vite-plugin-node-polyfills": "^0.23.0"
   },
   "dependencies": {
     "@junobuild/analytics": "^0.1.0",
