--- a/vanilla/vite-typescript/package.json
+++ b/vanilla/vite-typescript/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@junobuild/config": "^0.1.6",
+    "@junobuild/vite-plugin": "^3.3.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
     "vite-plugin-node-polyfills": "^0.23.0"
