--- a/vanilla/vite-typescript/package.json
+++ b/vanilla/vite-typescript/package.json
@@ -13,8 +13,7 @@
     "@junobuild/config": "^0.1.6",
     "@junobuild/vite-plugin": "^3.3.0",
     "typescript": "^5.8.3",
-    "vite": "^6.3.3",
-    "vite-plugin-node-polyfills": "^0.23.0"
+    "vite": "^6.3.3"
   },
   "dependencies": {
     "@junobuild/analytics": "^0.1.8",
