--- a/node/analytics/package.json
+++ b/node/analytics/package.json
@@ -6,17 +6,18 @@
   "type": "module",
   "scripts": {
     "format": "prettier .. --write",
-    "list": "node analytics.mjs"
+    "analytics": "node analytics.mjs"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@dfinity/identity": "^2.4.1",
     "@dfinity/utils": "^2.13.0",
-    "@junobuild/analytics": "^0.1.8",
+    "@junobuild/admin": "^0.2.0",
     "@junobuild/cli-tools": "^0.1.9",
     "@junobuild/core": "^0.1.11",
     "conf": "^13.1.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "prompts": "^2.4.2"
   },
