--- a/node/analytics/upload/package.json
+++ b/node/analytics/upload/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "@dfinity/identity": "^2.4.1",
     "@dfinity/utils": "^2.13.0",
-    "@junobuild/admin": "^0.2.0",
+    "@junobuild/admin": "^0.2.0-next-2025-05-02",
     "@junobuild/cli-tools": "^0.1.9",
     "@junobuild/core": "^0.1.11",
     "conf": "^13.1.0",
     "dotenv": "^16.5.0",
-    "prompts": "^2.4.2"
+    "prompts": "^2.4.2",
+    "ua-parser-js": "^1.0.40"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
