build: use next analytics

--- a/astro/package.json
+++ b/astro/package.json
@@ -24,7 +24,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@junobuild/analytics": "^0.1.8",
+    "@junobuild/analytics": "^0.1.8-next-2025-05-02",
     "@junobuild/core": "^0.1.11"
   }
 }
