--- a/astro/package.json
+++ b/astro/package.json
@@ -8,8 +8,7 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier --write './**/*.{ts,js,mjs,json,scss,css,astro,html,md}'",
-    "postinstall": "node -e \"require('fs').cpSync('node_modules/@junobuild/analytics/dist/workers/', './public/workers', {recursive: true});\""
+    "format": "prettier --write './**/*.{ts,js,mjs,json,scss,css,astro,html,md}'"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
