--- a/astro/package.json
+++ b/astro/package.json
@@ -12,18 +12,18 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.2.5",
+    "@astrojs/mdx": "^4.2.6",
     "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.3.1",
+    "@astrojs/sitemap": "^3.4.0",
     "@junobuild/config": "^0.1.8",
     "@junobuild/vite-plugin": "^3.4.0",
-    "astro": "^5.7.5",
+    "astro": "^5.7.13",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@junobuild/analytics": "^0.1.8-next-2025-05-04",
-    "@junobuild/core": "^0.1.11"
+    "@junobuild/analytics": "^0.2.0",
+    "@junobuild/core": "^0.1.13"
   }
 }
