--- a/rust/hooks/package.json
+++ b/rust/hooks/package.json
@@ -9,14 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "@junobuild/vite-plugin": "^0.0.19",
-    "typescript": "^5.7.3",
-    "vite": "^6.0.11",
-    "vite-plugin-compression": "^0.5.1"
+    "@junobuild/vite-plugin": "^4.0.0",
+    "typescript": "^5.8.3",
+    "vite": "^7.0.2",
+    "vite-plugin-node-polyfills": "^0.24.0"
   },
   "dependencies": {
-    "@junobuild/admin": "^0.1.2",
-    "@junobuild/core": "^0.1.1"
+    "@junobuild/admin": "^0.6.0",
+    "@junobuild/core": "^0.1.17"
   }
 }
