--- a/rust/hooks/package.json
+++ b/rust/hooks/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@junobuild/config": "^0.4.0",
     "@junobuild/vite-plugin": "^4.0.0",
     "typescript": "^5.8.3",
     "vite": "^7.0.2",
