--- a/rust/json/package.json
+++ b/rust/json/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "json",
+	"name": "json-example",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --force",
 		"build": "tsc --noEmit && vite build",
-		"preview": "vite preview",
 		"prepare": "svelte-kit sync",
+		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
@@ -15,31 +15,37 @@
 		"postinstall": "npm run postinstall:copy-auth"
 	},
 	"devDependencies": {
-		"@junobuild/config": "^0.1.0",
-		"@junobuild/vite-plugin": "^0.0.19",
+		"@junobuild/config": "^0.4.0",
+		"@junobuild/vite-plugin": "^4.0.0",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.16.1",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@sveltejs/kit": "^2.22.1",
+		"@sveltejs/vite-plugin-svelte": "^5.1.0",
+		"@tailwindcss/postcss": "^4.1.10",
+		"@tailwindcss/vite": "^4.1.10",
 		"@types/eslint": "^9.6.1",
-		"autoprefixer": "^10.4.20",
-		"eslint": "^9.19.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^2.46.1",
-		"globals": "^15.14.0",
-		"postcss": "^8.5.1",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.19.5",
-		"svelte-check": "^4.1.4",
-		"tailwindcss": "^4.0.1",
+		"eslint": "^9.29.0",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-svelte": "^3.9.3",
+		"globals": "^16.2.0",
+		"postcss": "^8.5.6",
+		"prettier": "^3.6.1",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.6.13",
+		"svelte": "^5.34.8",
+		"svelte-check": "^4.2.2",
+		"tailwindcss": "^4.1.10",
 		"tslib": "^2.8.1",
-		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.22.0",
-		"vite": "^6.0.11"
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.35.0",
+		"vite": "^6.3.5"
 	},
 	"type": "module",
 	"dependencies": {
-		"@junobuild/core": "^0.1.1",
-		"nanoid": "^5.0.9"
+		"@junobuild/core": "^0.1.17",
+		"@junobuild/functions": "^0.2.1",
+		"nanoid": "^5.1.5"
+	},
+	"overrides": {
+		"cookie": "^0.7.0"
 	}
 }
