--- a/rust/calls/src/satellite/Cargo.toml
+++ b/rust/calls/src/satellite/Cargo.toml
@@ -12,7 +12,9 @@ ic-cdk = "0.17.1"
 ic-cdk-macros = "0.17.1"
 serde = "1.0.217"
 serde_cbor = "0.11.2"
-junobuild-satellite = "0.1.0"
+junobuild-satellite = {version = "0.2.0", default-features = false, features = ["on_set_doc"]}
 junobuild-macros = "0.1.0"
-junobuild-utils = "0.1.0"
+junobuild-utils = "0.1.1"
+icrc-ledger-types = "0.1.8"
+ic-ledger-types = "0.14.0"
 
