--- a/functions/typescript/calls/package.json
+++ b/functions/typescript/calls/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@dfinity/ledger-icp": "^3.0.0",
+    "@dfinity/ledger-icrc": "^2.9.0",
     "@dfinity/utils": "^2.13.1",
     "@junobuild/core": "^0.1.17",
     "@junobuild/functions": "^0.2.1",
