--- a/node/admin/import-export-docs/package.json
+++ b/node/admin/import-export-docs/package.json
@@ -12,13 +12,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@dfinity/identity": "^3.2.5",
-    "@dfinity/utils": "^3.1.0",
-    "@junobuild/cli-tools": "^0.7.2",
+    "@junobuild/config": "^2.2.0",
     "@junobuild/core": "^2.1.1",
-    "conf": "^14.0.0",
-    "dotenv": "^17.2.2",
-    "prompts": "^2.4.2"
+    "dotenv": "^17.2.2"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
