--- a/node/admin/migrate-old-user-data/package.json
+++ b/node/admin/migrate-old-user-data/package.json
@@ -6,20 +6,13 @@
   "type": "module",
   "scripts": {
     "format": "prettier .. --write",
-    "list": "node migrate.mjs --list",
-    "migrate": "node migrate.mjs"
+    "migrate": "juno run --src migrate.mjs"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@dfinity/identity": "^2.3.0",
-    "@dfinity/utils": "^2.10.1",
-    "@junobuild/admin": "^0.1.5",
-    "@junobuild/cli-tools": "^0.1.3",
-    "@junobuild/core": "^0.1.8",
-    "conf": "^13.1.0",
-    "dotenv": "^16.4.7",
-    "prompts": "^2.4.2"
+    "@junobuild/config": "^2.2.0",
+    "@junobuild/core": "^2.2.0"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
