feat: use juno run

--- a/node/admin/controller/package.json
+++ b/node/admin/controller/package.json
@@ -6,16 +6,13 @@
   "type": "module",
   "scripts": {
     "format": "prettier .. --write",
-    "start": "node index.mjs"
+    "start": "juno run --src index.mjs"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@dfinity/identity": "^2.2.0",
-    "@dfinity/principal": "^2.2.0",
-    "@junobuild/admin": "^0.1.2",
-    "conf": "^13.1.0",
-    "dotenv": "^16.4.7"
+    "@junobuild/admin": "^2.2.2",
+    "@junobuild/config": "^2.2.0"
   },
   "devDependencies": {
     "prettier": "^3.4.2",
