--- a/node/analytics/collect/package.json
+++ b/node/analytics/collect/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@junobuild/cli-tools": "^0.8.0",
     "@junobuild/config": "^2.2.0",
     "@junobuild/ic-client": "^3.1.2",
-    "date-fns": "^4.1.0"
+    "date-fns": "^4.1.0",
+    "dotenv": "^17.2.2"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
