--- a/functions/typescript/calls/package.json
+++ b/functions/typescript/calls/package.json
@@ -13,38 +13,36 @@
     "postinstall": "npm run postinstall:copy-auth"
   },
   "dependencies": {
-    "@dfinity/ledger-icp": "^3.0.0",
-    "@dfinity/ledger-icrc": "^2.9.0",
-    "@dfinity/utils": "^2.13.1",
-    "@junobuild/core": "^0.1.17",
-    "@junobuild/functions": "^0.2.1",
-    "nanoid": "^5.1.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "@dfinity/utils": "^4.0.1",
+    "@icp-sdk/canisters": "^2.0.1",
+    "@junobuild/core": "^3.2.0",
+    "@junobuild/functions": "^0.5.0",
+    "nanoid": "^5.1.6",
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@junobuild/config": "^0.4.0",
-    "@junobuild/vite-plugin": "^4.0.0",
-    "@tailwindcss/postcss": "^4.1.10",
-    "@tailwindcss/vite": "^4.1.10",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
-    "eslint": "^9.29.0",
+    "@eslint/js": "^9.39.1",
+    "@junobuild/config": "^2.6.0",
+    "@junobuild/vite-plugin": "^4.4.0",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.2.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.1",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4.1.10",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.0",
-    "vite": "^6.3.5",
-    "vite-plugin-node-polyfills": "^0.24.0"
+    "prettier": "^3.6.2",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.48.0",
+    "vite": "^7.2.4"
   },
   "overrides": {
     "vite-plugin-node-polyfills": {
